--- a/login.html
+++ b/login.html
@@ -549,7 +549,7 @@
 
         <div class="form-hint">
           <i class="fas fa-info-circle"></i>
-          <span>Vos données seront synchronisées sur tous vos appareils</span>
+          <span>Henoc Marc</span>
         </div>
       </form>
     </div>
