--- a/login.html
+++ b/login.html
@@ -444,7 +444,7 @@
         <ul class="brand-features">
           <li>
             <i class="fas fa-shield-alt"></i>
-            <span>Sécurisé par Firebase</span>
+            <span>Sécurisé</span>
           </li>
           <li>
             <i class="fas fa-sync-alt"></i>
@@ -509,7 +509,7 @@
 
         <div class="form-hint">
           <i class="fas fa-info-circle"></i>
-          <span>Utilisez vos identifiants Firebase pour vous connecter</span>
+          <span>Utilisez vos identifiants  pour vous connecter</span>
         </div>
       </form>
 
