--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Connexion / Inscription — SIMMO 2.0</title>
+  <title>Connexion / Inscription — CI Habitat</title>
   <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -431,7 +431,7 @@
         <div class="brand-logo">
           <img src="logo.jpeg" alt="SIMMO Logo">
           <div>
-            <h1 class="brand-title">SIMMO 2.0</h1>
+            <h1 class="brand-title">CI Habitat</h1>
             <div style="opacity: 0.9; font-size: 14px;">Gestion & Paiements</div>
           </div>
         </div>
