--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Connexion — CI Habitat</title>
+  <title>Connexion / Inscription — CI Habitat</title>
   <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -292,4 +292,3 @@
   </script>
 </body>
 </html>
-
