--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ firebase.auth().onAuthStateChanged(function(user) {
             <div class="pill-inner">
                 <div class="pill-left">
                     <div class="pill-icon">
-                        <img src="logo.jpeg" alt="logo" />
+                        <img id="pillLogo" data-keep="true" src="logo.jpeg" alt="logo" />
                     </div>
                 </div>
 
